[gd_scene load_steps=5 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://HUD.tscn" type="PackedScene" id=2]
[ext_resource path="res://PhaseTracker.tscn" type="PackedScene" id=4]
[ext_resource path="res://Map.tscn" type="PackedScene" id=5]

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Map" parent="." instance=ExtResource( 5 )]

[node name="HUD" parent="." instance=ExtResource( 2 )]

[node name="PhaseTracker" parent="." instance=ExtResource( 4 )]
[connection signal="start_game" from="HUD" to="." method="new_game"]
[connection signal="done" from="PhaseTracker" to="." method="_on_PhaseTracker_done"]
